--- a/shopee/shopee.css
+++ b/shopee/shopee.css
@@ -6,14 +6,14 @@
 }
 
 body {
-    background-color: rgb(219, 213, 213)
+    background-color:rgb(230, 227, 224)
 }
 
 .wrap {
     margin: auto;
     width: 1280px;
-    border: 1px solid #000;
-    background-color: #000;
+    border: 1px solid:#f0f0f0;
+    background-color:#f0f0f0;
 }
 
 .header a {
@@ -89,7 +89,7 @@ svg {
     width: 66%;
     display: flex;
     flex-wrap: wrap;
-    background-color: #fff;
+    background-color:#f0f0f0;
     padding-bottom: 10px;
     justify-content: space-evenly;
 }
