--- a/shopee/shopee.css
+++ b/shopee/shopee.css
@@ -74,7 +74,7 @@ svg {
     padding-top: 10px;
     padding-left: 10px;
     display: flex;
-    justify-content: space-between;
+    
 }
 
 .left_colum {
@@ -90,8 +90,6 @@ svg {
     display: flex;
     flex-wrap: wrap;
     background-color:#f0f0f0;
-    padding-bottom: 10px;
-    justify-content: space-evenly;
 }
 
 .right_colum img {
@@ -108,4 +106,8 @@ svg {
     font-size: 18px;
     color: #d0011b;
     font-weight: bolder;
+}
+
+.item a{
+    text-decoration: none;
 }
