--- a/Google/google.css
+++ b/Google/google.css
@@ -1,3 +1,13 @@
+
+ body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    background-color: black;
+}
+
+
 .header{
     display: flex;
     justify-content:flex-end;
